apps/stremio-addon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stremio-addon
  namespace: stremio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stremio-addon
  template:
    metadata:
      labels:
        app: stremio-addon
    spec:
      containers:
      - name: addon
        image: ghcr.io/belchiorg/stremio-addon:latest
        ports:
        - containerPort: 7000
