apps/stremio-addon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stremio-addon
  namespace: stremio
spec:
  ports:
  - port: 7000
    targetPort: 7000
  selector:
    app: stremio-addon
