apps/stremio-addon/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio-addon-ingress
  namespace: stremio
spec:
  ingressClassName: traefik
  rules:
  - host: stremio.guilhermebelchior.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stremio-addon
            port:
              number: 7000
